src/css/multiselect.css
/*csslint box-sizing: false*/

am-multiselect .dropdown-menu{
    box-sizing: content-box;
    height: 200px;
    overflow-x: scroll;
    overflow-y: scroll;
    padding-left: 5px;
    padding-right: 5px;
    width:100%;
}

am-multiselect .dropdown-menu > li > a {
    cursor:pointer;
    padding: 3px 10px;
    white-space: normal;
}

am-multiselect .dropdown-menu > .selected {
    background-color: #ADD8E6;
}

am-multiselect .btn-group > button {
    border-radius:5px !important; /* csslint allow: known-properties, important */
    overflow:hidden;
    white-space: normal;
	width:100%;
}

am-multiselect .btn-group {
    width:100%;
}

